docs(decorated-window): document --add-opens requirement for IDE runs on macOS